hphp/test/slow/traits/diamond_use.php.expectf
Fatal error: Method 'foo' declared in multiple traits (T1, T2) in %s/diamond_use.php on line 13
